Fixed bug with white background behind stream tree

--- a/upmuplot/packages/s3ui/css/s3ui.css
+++ b/upmuplot/packages/s3ui/css/s3ui.css
@@ -35,10 +35,10 @@ rect.clickscreen {
 }
 .jstree-node {
     position: relative;
-    z-index: 49999; /* So the tree isn't covered by the something accidentally. */
+    z-index: 49999; /* So the tree isn't covered by something accidentally. */
 }
-.streamTree * {
-    background-color: white;
+.streamTree a {
+    background-color: white; /* So the entries remain readable if they go over something */
 }
 div.permalink {
     word-wrap: break-word;
